src/MyParser.java
/* MyParser.java */
/* Generated By:JavaCC: Do not edit this line. MyParser.java */
import java.io.StringReader;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

public class MyParser implements MyParserConstants {
    public static void main(String[] args) throws FileNotFoundException {
        if(args.length < 2 || args.length > 3) {
            throw new RuntimeException("Incorrect # of command arguments");
        }
        MyParser parser;
        if(args[0].equals("-t")) {
            parser = new MyParser(new StringReader(args[1]));
        } else if(args[0].equals("-f")) {
            File file = new File(args[1]);
            parser = new MyParser(new FileInputStream(file));
        } else {
            throw new RuntimeException("Incorrect input flag");
        }
        try {
            NodeProg ast = parser.Prog();
            Visitor v = new MyVisitor();
            ast.accept(v);
            System.out.println("Success!");
        } catch(ParseException e) {
            System.out.println("Failure Parsing!");
            System.out.println(e.getMessage());
        }
    }

  static final public NodeProg Prog() throws ParseException {Token id;
    List<NodeConstDecl> constDecls = new ArrayList<NodeConstDecl>();
    List<NodeConstDecl> constDecl = null;
    List<NodeEnumDecl> enumDecls = new ArrayList<NodeEnumDecl>();
    NodeEnumDecl enumDecl = null;
    List<NodeVarDecl> varDecls = new ArrayList<NodeVarDecl>();
    List<NodeVarDecl> varDecl = null;
    List<NodeClassDecl> classDecls = new ArrayList<NodeClassDecl>();
    NodeClassDecl classDecl = null;
    List<NodeMethodDecl> methods = new ArrayList<NodeMethodDecl>();
    NodeMethodDecl method = null;
    List<NodeInterfaceDecl> interfaces = new ArrayList<NodeInterfaceDecl>();
    NodeInterfaceDecl interf = null;
    jj_consume_token(PROG);
    id = jj_consume_token(IDENT);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:
      case ENUM:
      case CLASS:
      case INTERFACE:
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:{
        constDecl = ConstDecl();
constDecls.addAll(constDecl);
        break;
        }
      case ENUM:{
        enumDecl = EnumDecl();
enumDecls.add(enumDecl);
        break;
        }
      case IDENT:{
        varDecl = VarDecl();
varDecls.addAll(varDecl);
        break;
        }
      case CLASS:{
        classDecl = ClassDecl();
classDecls.add(classDecl);
        break;
        }
      case INTERFACE:{
        interf = InterfaceDecl();
interfaces.add(interf);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(43);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VOID:
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      method = MethodDecl();
methods.add(method);
    }
    jj_consume_token(44);
    jj_consume_token(0);
{if ("" != null) return new NodeProg(id.image, constDecls, enumDecls, varDecls, interfaces, classDecls, methods);}
    throw new Error("Missing return statement in function");
}

  static final public List<NodeConstDecl> ConstDecl() throws ParseException {List<NodeConstDecl> decls = new ArrayList<NodeConstDecl>();
    Token n, v;
    String t;
    jj_consume_token(CONST);
    t = Type();
    n = jj_consume_token(IDENT);
    jj_consume_token(EQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      v = jj_consume_token(NUM);
      break;
      }
    case BOOL:{
      v = jj_consume_token(BOOL);
      break;
      }
    case CHAR:{
      v = jj_consume_token(CHAR);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
decls.add(new NodeConstDecl(t, n.image, v.image));
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(45);
      n = jj_consume_token(IDENT);
      jj_consume_token(EQ);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUM:{
        v = jj_consume_token(NUM);
        break;
        }
      case BOOL:{
        v = jj_consume_token(BOOL);
        break;
        }
      case CHAR:{
        v = jj_consume_token(CHAR);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
decls.add(new NodeConstDecl(t, n.image, v.image));
    }
    jj_consume_token(46);
{if ("" != null) return decls;}
    throw new Error("Missing return statement in function");
}

  static final public NodeEnumDecl EnumDecl() throws ParseException {Token id;
    Token key = null, val = null;
    Map<String, String> vals = new HashMap<String, String>();
    jj_consume_token(ENUM);
    id = jj_consume_token(IDENT);
    jj_consume_token(43);
    key = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
      val = jj_consume_token(NUM);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
vals.put(key.image, val == null ? null : val.image); val = null;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(45);
      key = jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        jj_consume_token(EQ);
        val = jj_consume_token(NUM);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
vals.put(key.image, val == null ? null : val.image); val = null;
    }
    jj_consume_token(44);
{if ("" != null) return new NodeEnumDecl(id.image, vals);}
    throw new Error("Missing return statement in function");
}

  static final public List<NodeVarDecl> VarDecl() throws ParseException {List<NodeVarDecl> decls = new ArrayList<NodeVarDecl>();
    String t;
    Token id;
    t = Type();
    id = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 47:{
      jj_consume_token(47);
      jj_consume_token(48);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
decls.add(new NodeVarDecl(t, id.image));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      jj_consume_token(45);
      id = jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        jj_consume_token(47);
        jj_consume_token(48);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
decls.add(new NodeVarDecl(t, id.image));
    }
    jj_consume_token(46);
{if ("" != null) return decls;}
    throw new Error("Missing return statement in function");
}

  static final public NodeInterfaceDecl InterfaceDecl() throws ParseException {Token id;
    List<NodeInterfaceMethodDecl> methods = new ArrayList<NodeInterfaceMethodDecl>();
    NodeInterfaceMethodDecl method = null;
    jj_consume_token(INTERFACE);
    id = jj_consume_token(IDENT);
    jj_consume_token(43);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VOID:
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      method = InterfaceMethodDecl();
methods.add(method);
    }
    jj_consume_token(44);
{if ("" != null) return new NodeInterfaceDecl(id.image, methods);}
    throw new Error("Missing return statement in function");
}

  static final public NodeInterfaceMethodDecl InterfaceMethodDecl() throws ParseException {Token id;
    String returnType = null;
    Map<String, String> formPars = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      returnType = Type();
      break;
      }
    case VOID:{
      jj_consume_token(VOID);
if(returnType == null) returnType = "void";
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    id = jj_consume_token(IDENT);
    jj_consume_token(49);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      formPars = FormPars();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(50);
    jj_consume_token(46);
{if ("" != null) return new NodeInterfaceMethodDecl(id.image, returnType, formPars);}
    throw new Error("Missing return statement in function");
}

  static final public Map<String,String> FormPars() throws ParseException {Map<String,String> formPars = new HashMap<String,String>();
    String type;
    Token id;
    type = Type();
    id = jj_consume_token(IDENT);
formPars.put(id.image, type);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 47:{
      jj_consume_token(47);
      jj_consume_token(48);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(45);
      type = Type();
      id = jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        jj_consume_token(47);
        jj_consume_token(48);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
formPars.put(id.image, type);
    }
{if ("" != null) return formPars;}
    throw new Error("Missing return statement in function");
}

  static final public NodeClassDecl ClassDecl() throws ParseException {Token id;
    String parent = null;
    String impl = null;
    List<String> impls = new ArrayList<String>();
    List<NodeVarDecl> vars = new ArrayList<NodeVarDecl>();
    List<NodeVarDecl> var = null;
    List<NodeMethodDecl> methods = new ArrayList<NodeMethodDecl>();
    NodeMethodDecl method = null;
    jj_consume_token(CLASS);
    id = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXTENDS:{
      jj_consume_token(EXTENDS);
      parent = Type();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IMPLEMENTS:{
      jj_consume_token(IMPLEMENTS);
      impl = Type();
impls.add(impl);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 45:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        jj_consume_token(45);
        impl = Type();
impls.add(impl);
      }
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(43);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_9;
      }
      var = VarDecl();
vars.addAll(var);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 43:{
      jj_consume_token(43);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VOID:
        case IDENT:{
          ;
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          break label_10;
        }
        method = MethodDecl();
methods.add(method);
      }
      jj_consume_token(44);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(44);
{if ("" != null) return new NodeClassDecl(id.image, parent, impls, vars, methods);}
    throw new Error("Missing return statement in function");
}

  static final public NodeMethodDecl MethodDecl() throws ParseException {String returnType = null;
    Token id;
    Map<String,String> formPars = new HashMap<String, String>();
    List<NodeVarDecl> vars = new ArrayList<NodeVarDecl>();
    List<NodeVarDecl> var = null;
    List<NodeStatement> statements = new ArrayList<NodeStatement>();
    NodeStatement statement;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      returnType = Type();
      break;
      }
    case VOID:{
      jj_consume_token(VOID);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
if(returnType == null) returnType = "void";
    id = jj_consume_token(IDENT);
    jj_consume_token(49);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      formPars = FormPars();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(50);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        break label_11;
      }
      var = VarDecl();
vars.addAll(var);
    }
    jj_consume_token(43);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case FOR:
      case BREAK:
      case CONTINUE:
      case RETURN:
      case READ:
      case PRINT:
      case IDENT:
      case 43:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_12;
      }
      statement = Statement();
statements.add(statement);
    }
    jj_consume_token(44);
{if ("" != null) return new NodeMethodDecl(id.image, returnType, formPars, vars, statements);}
    throw new Error("Missing return statement in function");
}

  static final public String Type() throws ParseException {Token id;
    id = jj_consume_token(IDENT);
{if ("" != null) return id.image;}
    throw new Error("Missing return statement in function");
}

  static final public NodeStatement Statement() throws ParseException {NodeStatement statement1 = null;
    NodeStatement statement2 = null;
    NodeStatement statement3 = null;
    NodeCondition condition = null;
    NodeExpr expression = null;
    NodeDesignator designator = null;
    Token t = null;
    List<NodeStatement> statements = new ArrayList<NodeStatement>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      statement1 = DesignatorStatement();
      jj_consume_token(46);
{if ("" != null) return statement1;}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(49);
      condition = Condition();
      jj_consume_token(50);
      statement1 = Statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        statement2 = Statement();
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        ;
      }
{if ("" != null) return new NodeStatementIf(condition, statement1, statement2);}
      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(49);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        statement1 = DesignatorStatement();
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        ;
      }
      jj_consume_token(46);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case MINUS:
      case NUM:
      case BOOL:
      case CHAR:
      case IDENT:{
        condition = Condition();
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        ;
      }
      jj_consume_token(46);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        statement2 = DesignatorStatement();
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        ;
      }
      jj_consume_token(50);
      statement3 = Statement();
{if ("" != null) return new NodeStatementFor(statement1, condition, statement2, statement3);}
      break;
      }
    case BREAK:{
      jj_consume_token(BREAK);
      jj_consume_token(46);
{if ("" != null) return new NodeStatementNoOp();}
      break;
      }
    case CONTINUE:{
      jj_consume_token(CONTINUE);
      jj_consume_token(46);
{if ("" != null) return new NodeStatementNoOp();}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case MINUS:
      case NUM:
      case BOOL:
      case CHAR:
      case IDENT:{
        expression = Expr();
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        ;
      }
      jj_consume_token(46);
{if ("" != null) return new NodeStatementReturn(expression);}
      break;
      }
    case READ:{
      jj_consume_token(READ);
      jj_consume_token(49);
      designator = Designator();
      jj_consume_token(50);
      jj_consume_token(46);
{if ("" != null) return new NodeStatementRead(designator);}
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      jj_consume_token(49);
      expression = Expr();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        t = jj_consume_token(NUM);
        break;
        }
      default:
        jj_la1[33] = jj_gen;
        ;
      }
      jj_consume_token(50);
      jj_consume_token(46);
{if ("" != null) return new NodeStatementPrint(expression, (t == null ? null : t.image));}
      break;
      }
    case 43:{
      jj_consume_token(43);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case FOR:
        case BREAK:
        case CONTINUE:
        case RETURN:
        case READ:
        case PRINT:
        case IDENT:
        case 43:{
          ;
          break;
          }
        default:
          jj_la1[34] = jj_gen;
          break label_13;
        }
        statement1 = Statement();
statements.add(statement1);
      }
      jj_consume_token(44);
{if ("" != null) return new NodeStatementNested(statements);}
{if ("" != null) return statement1;}
      break;
      }
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public NodeStatementDesignator DesignatorStatement() throws ParseException {NodeDesignator designator;
    NodeExpr expr = null;
    NodeActPars actPars = null;
    designator = Designator();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      Assignop();
      expr = Expr();
      break;
      }
    case 49:{
      jj_consume_token(49);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case MINUS:
      case NUM:
      case BOOL:
      case CHAR:
      case IDENT:{
        actPars = ActPars();
        break;
        }
      default:
        jj_la1[36] = jj_gen;
        ;
      }
      jj_consume_token(50);
      break;
      }
    case PLUSx2:{
      jj_consume_token(PLUSx2);
      break;
      }
    case MINUSx2:{
      jj_consume_token(MINUSx2);
      break;
      }
    default:
      jj_la1[37] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new NodeStatementDesignator(designator, expr, actPars);}
    throw new Error("Missing return statement in function");
}
